fix badge description cutoff by removing its (arbitrary) CSS height

--- a/less/pages/badges.less
+++ b/less/pages/badges.less
@@ -281,15 +281,6 @@
 }
 
 
-.badge-vertical-icon{
-  .badge-text{
-    .description{
-      height: 7rem;
-    }
-  }
-}
-
-
 div.modal-credly{
   &.error {
     button.back {
